tests/checker/ok/validated_constructor.can
InvalidUrl = String

Url = String

Url = (String) => Result<Url, InvalidUrl> {
    String
        -> Url
        -> Ok
}

Unit => Program {
    "validated ctor declared" -> Print
}
