tests/checker/fail/json_string_ceremony.can
Unit => Result<Program, MalformedJson> {
    Json("{\"a\":1}")? -> Print
    Unit() -> Ok
}
